--- a/package.json
+++ b/package.json
@@ -1,1 +1,40 @@
-{"scripts":{"dev":"next dev","build":"next build","start":"next start","lint":"next lint"},"dependencies":{"@headlessui/react":"^1.7.13","@tippyjs/react":"^4.2.6","chart.js":"^4.2.1","embla-carousel-autoplay":"^7.1.0","embla-carousel-react":"^7.1.0","eslint-config-next":"^13.1.6","i":"^0.3.7","jotai":"^2.0.3","next":"^13.2.4","npm":"^9.6.4","react":"^18.2.0","react-calendar":"^4.0.0","react-chartjs-2":"^5.2.0","react-dom":"^18.2.0","react-hot-toast":"^2.4.0","react-input-mask-next":"^3.0.0-alpha.12","react-intersection-observer":"^9.4.3","react-player":"^2.12.0","react-plx":"^2.0.1"},"devDependencies":{"@types/node":"^18.15.0","@types/react":"^18.0.28","@types/react-dom":"^18.0.11","autoprefixer":"^10.4.13","postcss":"^8.4.21","tailwindcss":"^3.2.7","typescript":"^4.9.5"}}
+{
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint",
+		"prettier": "prettier --write ./**/*.{js,jsx,ts,tsx,css,md,json,html}"
+	},
+	"dependencies": {
+		"@headlessui/react": "^1.7.13",
+		"@tippyjs/react": "^4.2.6",
+		"chart.js": "^4.2.1",
+		"cookies-next": "^2.1.1",
+		"embla-carousel-autoplay": "^7.1.0",
+		"embla-carousel-react": "^7.1.0",
+		"eslint-config-next": "^13.1.6",
+		"jotai": "^2.0.3",
+		"next": "^13.2.4",
+		"react": "^18.2.0",
+		"react-calendar": "^4.0.0",
+		"react-chartjs-2": "^5.2.0",
+		"react-dom": "^18.2.0",
+		"react-hook-form": "^7.43.9",
+		"react-hot-toast": "^2.4.0",
+		"react-input-mask-next": "^3.0.0-alpha.12",
+		"react-intersection-observer": "^9.4.3",
+		"react-player": "^2.12.0",
+		"react-plx": "^2.0.1"
+	},
+	"devDependencies": {
+		"@types/node": "^18.15.0",
+		"@types/react": "^18.0.28",
+		"@types/react-dom": "^18.0.11",
+		"autoprefixer": "^10.4.13",
+		"postcss": "^8.4.21",
+		"prettier-plugin-tailwindcss": "^0.3.0",
+		"tailwindcss": "^3.2.7",
+		"typescript": "^4.9.5"
+	}
+}
