--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,8 @@
 {
+	"parserOptions": { "ecmaVersion": 13 },
+	"extends": ["next/core-web-vitals"],
 	"rules": {
-		"react/react-in-jsx-scope": "off"
+	  "@next/next/no-img-element": "off",
+	  "react/display-name": "off"
 	}
-}
+  }
